[package]
name = "bevy_reactive_blueprints"
version = "0.1.0"
edition = "2021"
authors = ["Sean Sullivan <me@snen.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snendev/bevy-reactive-blueprints"

[dependencies]
bevy = { version = "0.12", default-features = false }

[dev-dependencies]
bevy_editor_pls = "0.7"
bevy = { version = "0.12", default-features = false, features = [
    "tonemapping_luts",
] }

[[example]]
name = "editor"
path = "examples/editor.rs"
