[workspace]
members = ["editor"]

[package]
name = "bevy_reactive_blueprints"
version = "0.2.0"
edition = "2021"
authors = ["Sean Sullivan <me@snen.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snendev/bevy-reactive-blueprints"

[dependencies]
bevy = { version = "0.14", default-features = false }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "tonemapping_luts",
] }
