
[package]
name = "bevy_reactive_blueprints_editor_window"
version = "0.1.0"
edition = "2021"
authors = ["Sean Sullivan <me@snen.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snendev/bevy-reactive-blueprints"

[dependencies]
bevy_reactive_blueprints = { path = "../" }
bevy = { version = "0.12", default-features = false, features = [
    "tonemapping_luts",
] }

bevy_editor_pls = "0.7"

[[example]]
name = "basic"
path = "examples/basic.rs"
